Add mobile mock

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,6 +1,6 @@
-$black : #071013;
-$white: #F7F7FF;
-$light-blue : #A6CFD5;
-$dark-blue: #4E9BA6;
-$orange: #F3602B;
-$yellow: #FDE74C;
+$black: #071013;
+$white: #f7f7ff;
+$light-blue: #a6cfd5;
+$dark-blue: #4e9ba6;
+$orange: #f3602b;
+$yellow: #fde74c;
