--- a/src/components/Description/styles.scss
+++ b/src/components/Description/styles.scss
@@ -6,6 +6,18 @@
   height: 400px;
   position: relative;
 
+  @media (min-width: 768px) {
+    position: static;
+    display: flex;
+    align-items: center;
+
+    >:first-child {
+      width: 60%;
+      height: 80%;
+      margin-left: 50px;
+    }
+  }
+
   &Name {
     display: block;
     width: 70%;
@@ -21,6 +33,12 @@
     position: absolute;
     left: 15%;
     top: 3%;
+
+    @media (min-width: 768px) {
+      position: static;
+      width: 80%;
+      padding: 10px;
+    }
   }
 
   &Image {
@@ -29,9 +47,15 @@
     width: 150px;
     height: 160px;
     position: absolute;
-    left: calc(25%);
+    left: calc(50% - (150px / 2));
     top: 8%;
     z-index: 2;
+
+    @media (min-width: 768px) {
+      position: static;
+      width: 250px;
+      height: 300px;
+    }
   }
 
   &Description {
@@ -51,16 +75,45 @@
     td {
       width: 50%;
       padding: 7px 0;
+
+      @media (min-width: 768px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+      }
     }
 
     td:first-child {
       box-sizing: content-box;
       padding-left: 20px;
+
+      @media (min-width: 768px) {
+        font-weight: bold;
+        padding-left: 0;
+      }
     }
 
     td:nth-child(2) {
       box-sizing: content-box;
       padding-left: 20px;
+
+      @media (min-width: 768px) {
+        font-weight: bold;
+        padding: 0;
+        font-size: 20px;
+      }
+    }
+
+    @media (min-width: 768px) {
+      position: static;
+      width: 40%;
+      margin-right: 50px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      justify-items: center;
+      gap: 50px 10px;
     }
   }
 }
