--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -18,4 +18,9 @@
       color: variables.$white;
     }
   }
+
+  @media (min-width: 768px) {
+    justify-content: flex-start;
+    padding-left: 20px;
+  }
 }
