--- a/src/pages/Pokedex/styles.scss
+++ b/src/pages/Pokedex/styles.scss
@@ -1,4 +1,4 @@
-@use "../sass/variables";
+@use "../../sass/variables";
 
 .container {
   background-color: #fff;
@@ -11,7 +11,7 @@
   margin: 25px 0;
 }
 
-.app {
+.pokedex {
   min-height: 100vh;
   display: flex;
   align-items: center;
