--- a/src/components/Description/styles.scss
+++ b/src/components/Description/styles.scss
@@ -3,8 +3,9 @@
 .pokemon {
   background: variables.$light-blue;
   border-bottom: 1px solid variables.$black;
-  height: 400px;
+  height: 450px;
   position: relative;
+  text-transform: uppercase;
 
   @media (min-width: 768px) {
     position: static;
